# Graph-Isomorphism

./: .gitignore  .pre-commit-config.yaml  README.md  comparison.py  initial.ipynb  main.py  pyproject.toml  test.ipynb  tests.ipynb
datasets/: example_graph.g6
descriptors/: edge_descriptors.py  embeddings.py  node_descriptors.py
graph_utils/: __init__.py  descriptors.py  reading.py  visualisation.py
notebooks/: initial.ipynb  tests.ipynb
