[project]
name = "graph-isomorphism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "networkit==11.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "rdkit>=2024.9.6",
    "tqdm>=4.67.1",
    "xxhash>=3.5.0",
]
